# continuum

./: .clauderc  .eslintignore  .eslintrc.js  .gitignore  .gptrc  .npmrc  .test-instance-conversation.json  .test-instance-prompt.md  ACADEMY_ARCHITECTURE.md  ACADEMY_SYSTEM_COMPLETE.md  ADVERSARIAL_ROADMAP.md  AI-POWERED-DEVELOPMENT.md  ANONYMIZATION-PLAN.md  ARCHITECTURE.md  BROWSER_LOGS_COMPLETE_FIX.md  BUSINESS-PHILOSOPHY.md  CHECKIN_SUMMARY.md  CLAUDE.md  COMMANDS.md  COMPLETION-SUMMARY.md  CONTINUUM-ETHOS.md  CONTINUUM-SETUP-STRATEGY.md  CONTINUUM_MANIFESTO.md  CONTRIBUTING.md  DAEMON-IPC-ARCHITECTURE.md  DEVTOOLS_AUTO_LAUNCH_MECHANISM.md  DEVTOOLS_INTEGRATION_PLAN.md  DOCUMENTATION_INDEX.md  FILES.md  FILES.md.test-backup  GPT.json  IMPLEMENTATION_ROADMAP.md  INTEGRATION_STATUS.md  LANGUAGE_MIGRATION.md  LICENSE  MESH_CHARTER.md  MIDDLE-OUT.md  MIDDLE_OUT_SUCCESS.md  MIGRATION_SYSTEM_COMPLETE.md  MISSION.md  (+161 more)
src/debug/jtag/workers/: Cargo.toml  README.md  logger-worker  start-workers.sh  stop-workers.sh  training-worker  workers-config.json
src/debug/jtag/workers/archive/: README.md  test-concurrent.ts  test-real-data.ts  worker.config.ts
src/debug/jtag/workers/archive/src/: data_adapter.rs  db_client.rs  (+1 more)
src/debug/jtag/workers/chat-drain/: Cargo.toml  README.md
src/debug/jtag/workers/continuum-core/: Cargo.toml  PERFORMANCE.md
src/debug/jtag/workers/data/: Cargo.toml  INTEGRATION.md  LESSONS-LEARNED.md  PHASE-1-COMPLETE.md  README.md  continuum.db  continuum.db-shm  continuum.db-wal  test-rust-adapter.ts
src/debug/jtag/workers/data-daemon/: ARCHITECTURE.md  BUG-WHERE-CLAUSE-PARAMS.md  COUNT-IMPLEMENTATION-SUMMARY.md  Cargo.toml  EFFICIENT-COUNT-DESIGN.md  FILTER-BUG-VALIDATION.md  RUST-ADAPTER-DESIGN.md  TDD-STRATEGY.md  TRAIT-ADAPTER-ARCHITECTURE.md  WAL-CLEANUP.md  worker.config.ts
src/debug/jtag/workers/embedding/: ARCHITECTURE.md  Cargo.toml  worker.config.ts
src/debug/jtag/workers/inference/: Cargo.toml  worker.config.ts
src/debug/jtag/workers/inference-grpc/: Cargo.toml
src/debug/jtag/workers/logger/: Cargo.toml  README.md  worker.config.ts
src/debug/jtag/workers/search/: Cargo.toml  SearchWorkerClient.ts  worker.config.ts
src/debug/jtag/workers/shared/: binary_protocol.rs  gpu_allocator.rs  jtag_protocol.rs  logger_client.rs  mod.rs
src/debug/jtag/workers/streaming-core/: Cargo.toml  README.md  build.rs  models.json
src/debug/jtag/workers/training/: Cargo.toml
src/workers/continuum-core/: ARCHITECTURE.md  Cargo.toml  PERFORMANCE.md  build.rs
src/workers/continuum-core/bindings/: ConsciousnessContextRequest.ts  CorpusMemory.ts  MultiLayerRecallRequest.ts  RustCore.ts  RustCoreIPC.ts  benchmark-voice.ts  test-ipc.ts  test-voice-loop.ts  verify-integration.ts
src/workers/continuum-core/bindings/modules/: avatar.ts  base.ts  channel.ts  code.ts  cognition.ts  dataset.ts  embedding.ts  gpu.ts  index.ts  models.ts  rag.ts  runtime.ts  sentinel.ts  system_resources.ts  vision_cache.ts  voice.ts
src/workers/continuum-core/src/: audio_constants.rs  lib.rs  main.rs  secrets.rs
src/workers/continuum-core/src/ai/: adapter.rs  anthropic_adapter.rs  mod.rs  openai_adapter.rs  types.rs
src/workers/continuum-core/src/code/: change_graph.rs  diff_engine.rs  file_engine.rs  git_bridge.rs  mod.rs  path_security.rs  search.rs  shell_session.rs  shell_types.rs  tree.rs  types.rs
src/workers/continuum-core/src/concurrent/: message_processor.rs  mod.rs  priority_queue.rs
src/workers/continuum-core/src/ffi/: mod.rs
src/workers/continuum-core/src/gpu/: eviction_registry.rs  memory_manager.rs  mod.rs  tracker.rs
src/workers/continuum-core/src/inference/: candle_adapter.rs  lora.rs  mod.rs  model.rs  quantized.rs
src/workers/continuum-core/src/ipc/: mod.rs
src/workers/continuum-core/src/live/: mod.rs  types.rs
src/workers/continuum-core/src/logging/: client.rs  mod.rs  timing.rs
src/workers/continuum-core/src/memory/: cache.rs  consciousness.rs  corpus.rs  embedding.rs  mod.rs  recall.rs  timeline.rs  types.rs
src/workers/continuum-core/src/modules/: agent.rs  ai_provider.rs  avatar.rs  channel.rs  code.rs  cognition.rs  data.rs  dataset.rs  embedding.rs  gpu.rs  health.rs  live.rs  logger.rs  mcp.rs  memory.rs  mod.rs  models.rs  rag.rs  runtime_control.rs  search.rs  system_resources.rs  tool_parsing.rs  vision.rs  voice.rs
src/workers/continuum-core/src/orm/: connection_manager.rs  migration.rs  mod.rs  postgres.rs  query.rs  sqlite.rs  types.rs  vector.rs
src/workers/continuum-core/src/persona/: channel_items.rs  channel_queue.rs  channel_registry.rs  channel_types.rs  cognition.rs  domain_classifier.rs  evaluator.rs  genome_paging.rs  inbox.rs  message_cache.rs  mod.rs  model_selection.rs  self_task_generator.rs  types.rs  unified.rs
src/workers/continuum-core/src/rag/: budget.rs  engine.rs  mod.rs  types.rs
src/workers/continuum-core/src/runtime/: command_executor.rs  control.rs  message_bus.rs  mod.rs  module_context.rs  module_logger.rs  module_metrics.rs  registry.rs  runtime.rs  service_module.rs  shared_compute.rs
src/workers/continuum-core/src/system_resources/: memory_pressure.rs  mod.rs  monitor.rs
src/workers/continuum-core/src/tool_parsing/: codec.rs  correction.rs  mod.rs  parsers.rs  types.rs
src/workers/continuum-core/src/utils/: audio.rs  mod.rs  params.rs
src/workers/continuum-core/src/voice/: audio_buffer.rs  avatar_renderer.rs  bevy_renderer.rs  call_server.rs  call_server_orchestrator_test.rs  handle.rs  livekit_agent.rs  media.rs  mixer.rs  mod.rs  orchestrator.rs  orchestrator_tests.rs  stt_service.rs  tts_service.rs  types.rs  video_generator.rs  video_source.rs  voice_service.rs
src/workers/continuum-core/tests/: call_server_integration.rs  call_server_routing_test.rs  hold_music_test.rs  ipc_voice_tests.rs  logger_integration.rs  memory_recall_accuracy.rs  stt_noise_benchmark.rs  tts_only_test.rs  tts_stt_roundtrip.rs  tts_timing_benchmark.rs  voice_routing_integration.rs
src/workers/continuum-core/tests/common/: mod.rs
src/workers/jtag-mcp/: Cargo.toml
src/workers/jtag-mcp/src/: main.rs
(+12658 files in other folders)
