# JTAG Rust Workers Workspace
#
# This workspace provides consistent dependency versions across all Rust workers.
# Add new workers to the members list below.

[workspace]
resolver = "2"
members = [
    "archive",
    "chat-drain",
    "data",
    "data-daemon",
    "embedding",
    "inference",
    "logger",
    "search",
    "training",
]

# Shared dependencies - workers inherit these versions
[workspace.dependencies]
# Candle ML framework (pin version for consistency)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Timing and UUIDs (for JTAG protocol)
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Safetensors for model/adapter weights
safetensors = "0.4"

# Half-precision floats (f16, bf16)
half = "2.3"

# Byte slice casting (for safetensors -> tensor conversion)
bytemuck = { version = "1.14", features = ["derive"] }

# HuggingFace Hub for model downloads
hf-hub = "0.4"

# Tokenization
tokenizers = "0.20"

# Random number generation
rand = "0.8"

# Parallelism
rayon = "1.9"

# Type generation (Rust → TypeScript)
ts-rs = "9.0"

# Postgres (for future use)
deadpool-postgres = "0.14"
tokio-postgres = "0.7"

# Compression and hashing
flate2 = "1.0"
sha2 = "0.10"

# Thread-safe primitives
lazy_static = "1.4"
once_cell = "1.19"

# Embedding (fastembed)
fastembed = "4"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["JTAG Team"]
