# JTAG Rust Workers Workspace
#
# This workspace provides consistent dependency versions across all Rust workers.
# Add new workers to the members list below.

[workspace]
resolver = "2"
members = [
    "archive",
    "continuum-core",
    "inference-grpc",
    "jtag-mcp",
]

# Shared dependencies - workers inherit these versions
[workspace.dependencies]
# Candle ML framework (pin version for consistency)
# accelerate = Apple's Accelerate framework for faster BLAS on macOS
# metal = Apple Metal GPU acceleration
candle-core = { version = "0.8", features = ["accelerate"] }
candle-nn = { version = "0.8", features = ["accelerate"] }
candle-transformers = { version = "0.8", features = ["accelerate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"

# Timing and UUIDs (for JTAG protocol)
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Safetensors for model/adapter weights
safetensors = "0.4"

# Half-precision floats (f16, bf16)
half = "2.3"

# Byte slice casting (for safetensors -> tensor conversion)
bytemuck = { version = "1.14", features = ["derive"] }

# HuggingFace Hub for model downloads
hf-hub = "0.4"

# Tokenization
tokenizers = "0.20"

# Random number generation
rand = "0.8"

# Parallelism
rayon = "1.9"

# Type generation (Rust → TypeScript)
ts-rs = "9.0"

# Postgres (for future use)
deadpool-postgres = "0.14"
tokio-postgres = "0.7"

# Compression and hashing
flate2 = "1.0"
sha2 = "0.10"

# Thread-safe primitives
lazy_static = "1.4"
once_cell = "1.19"
parking_lot = "0.12"

# Async utilities
async-trait = "0.1"

# Error handling
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embedding (fastembed)
fastembed = "4"

# ONNX Runtime - ensure all crates use download-binaries (not load-dynamic)
# ndarray feature enables Tensor::from_array() for ndarray arrays
# TODO: Add GPU acceleration when ort linking issues are resolved:
#   - coreml: Apple CoreML (macOS) - linking error on arm64
#   - cuda: NVIDIA CUDA (Linux/Windows with 5090, etc.)
ort = { version = "2.0.0-rc.9", default-features = false, features = ["download-binaries", "ndarray"] }
ndarray = "0.16"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Edge-TTS (Microsoft Edge Read Aloud API — free, no API key)
msedge-tts = "0.3"


[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["JTAG Team"]
