[package]
name = "continuum-core"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for FFI, rlib for other Rust

[[bin]]
name = "continuum-core-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
dashmap = "6.1"  # Lock-free concurrent HashMap
async-trait = "0.1"  # Async methods in traits
chrono = { version = "0.4", features = ["serde"] }  # Timestamps for logging

[dev-dependencies]
tokio-test = "0.4"
