[package]
name = "data-daemon-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "9.0"
uuid = { version = "1", features = ["serde", "v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"

[[bin]]
name = "data-daemon-worker"
path = "src/main.rs"
