[package]
name = "data-daemon-worker"
version.workspace = true
edition.workspace = true
description = "Rust SQLite worker for high-performance data operations"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
uuid.workspace = true
rusqlite.workspace = true
deadpool-postgres.workspace = true
tokio-postgres.workspace = true
chrono.workspace = true
lazy_static.workspace = true
rayon.workspace = true
flate2.workspace = true
sha2.workspace = true

[[bin]]
name = "data-daemon-worker"
path = "src/main.rs"

[[bin]]
name = "data-worker-test"
path = "src/main_test.rs"
