[package]
name = "data-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = "11.0"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[[bin]]
name = "data-worker"
path = "src/main.rs"

[package.metadata.ts-rs]
export_dir = "bindings/"
