[package]
name = "embedding-worker"
version = "0.1.0"
edition = "2021"
description = "Native Rust embedding generation using fastembed (ONNX-based)"

[dependencies]
# Embedding generation
fastembed = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (for socket handling)
tokio = { version = "1", features = ["full"] }

# Timing
chrono = "0.4"

# Lazy initialization
lazy_static = "1.4"
once_cell = "1.19"

[[bin]]
name = "embedding-worker"
path = "src/main.rs"
