[package]
name = "embedding-worker"
version.workspace = true
edition.workspace = true
description = "Native Rust embedding generation using fastembed (ONNX-based)"

[dependencies]
# Embedding generation
fastembed.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime (for socket handling)
tokio.workspace = true

# Timing
chrono.workspace = true

# Lazy initialization
lazy_static.workspace = true
once_cell.workspace = true

[[bin]]
name = "embedding-worker"
path = "src/main.rs"
